# aztec-exchange

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
.github/workflows/: ci.yml
README/: md
api/: .env  pyproject.toml  requirements.txt
api/app/: auth.py  config.py  engine_client.py  logging_config.py  main.py  metrics.py  models.py  rate_limit.py  routes.py
api/tests/: conftest.py  test_api.py
docs/: architecture.md  latency-report.md  threat-model.md
engine/: CMakeLists.txt
engine/include/exchange/: event_log.hpp  matching_engine.hpp  order_book.hpp  protocol.hpp  risk_checks.hpp  snapshot.hpp  types.hpp
engine/src/: event_log.cpp  main.cpp  matching_engine.cpp  order_book.cpp  protocol.cpp  risk_checks.cpp  snapshot.cpp  types.cpp
engine/tests/: CMakeLists.txt  test_fuzz.cpp  test_matching.cpp  test_order_book.cpp  test_replay.cpp  test_risk.cpp
scripts/: README.md  benchmark.py  demo.ps1  reset_and_demo.ps1  reset_data.ps1  run_api.sh  run_engine.sh  test_exchange.ps1
test_vectors/: replay_test_basic.jsonl  replay_test_complex.jsonl
